# elevenlabs_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
elevenlabs-convai/: CHANGELOG.md  Cargo.toml  README.md
elevenlabs-convai/src/: client.rs  error.rs  lib.rs
elevenlabs-convai/src/messages/: client_messages.rs  mod.rs  server_messages.rs
elevenlabs_rs/: CHANGELOG.md  Cargo.toml  README.md
elevenlabs_rs/src/: client.rs  error.rs  lib.rs
elevenlabs_rs/src/endpoints/: mod.rs
elevenlabs_rs/src/endpoints/admin/: history.rs  mod.rs  projects.rs  pronunciation.rs  samples.rs  usage.rs  user.rs  voice.rs  voice_library.rs  workspace.rs
elevenlabs_rs/src/endpoints/convai/: agents.rs  conversations.rs  knowledge_base.rs  mod.rs  phone_numbers.rs  tools.rs  widget.rs  workspace.rs
elevenlabs_rs/src/endpoints/genai/: dubbing.rs  mod.rs  sound_effects.rs  speech_to_text.rs  text_to_dialogue.rs  text_to_voice.rs  tts.rs  voice_changer.rs
elevenlabs_rs/src/shared/: identifiers.rs  mod.rs  url.rs
elevenlabs_rs/src/utils/: audio_helpers.rs  mod.rs
examples/: basic_twilio.rs  convai_inbound_call.rs  convai_outbound_call.rs  inbound_call.rs  outbound_call.rs  pronunciation_dictionaries.rs  restaurant_receptionist.rs  twilio_openai.rs  websocket_openai.rs
examples/call_transfer/: .env  Cargo.toml  README.md
examples/call_transfer/src/: helpers.rs  main.rs  toolkit.rs
examples/call_transfer/src/handlers/: agents.rs  events.rs  mod.rs
examples/dtmf/: Cargo.toml
examples/dtmf/src/: main.rs
examples/inbound_call/: Cargo.toml
examples/inbound_call/src/: main.rs
examples/microphone/: Cargo.toml
examples/microphone/src/: audio_helpers.rs  audio_input.rs  audio_output.rs  main.rs  prelude.rs
examples/outbound_call/: Cargo.toml
examples/outbound_call/src/: main.rs
examples/pronunciation_dictionaries/: Cargo.toml  main.rs
examples/pronunciation_dictionaries/src/: main.rs
examples/real_time_monitoring/: Cargo.toml
examples/real_time_monitoring/src/: audio_output.rs  main.rs
examples/restaurant_receptionist/: Cargo.toml  README.md
examples/restaurant_receptionist/src/: agent.rs  db_types.rs  handlers.rs  main.rs  prelude.rs  twilio.rs
examples/ttd_rig_gemini/: Cargo.toml
examples/ttd_rig_gemini/src/: main.rs
integrations/twilio/: Cargo.toml
integrations/twilio/src/: lib.rs
src/: client.rs  error.rs  lib.rs  main.rs  prelude.rs  shared.rs  utils.rs
src/api/: history.rs  mod.rs  models.rs  samples.rs  tts.rs  user.rs  voice.rs
src/conversational_ai/: client.rs  client_messages.rs  error.rs  mod.rs  server_messages.rs
src/endpoints/: audio_isolation.rs  audio_native.rs  dubbing.rs  history.rs  mod.rs  models.rs  projects.rs  pronunciation.rs  samples.rs  sound_generation.rs  sts.rs  tts.rs  user.rs  voice.rs  voice_design.rs  voice_generation.rs  voice_library.rs
src/endpoints/admin/: audio_native.rs  history.rs  mod.rs  models.rs  projects.rs  pronunciation.rs  samples.rs  user.rs  voice.rs  voice_library.rs  workspace.rs
src/endpoints/convai/: agents.rs  conversations.rs  knowledge_base.rs  mod.rs  phone_numbers.rs  widget.rs
src/endpoints/genai/: audio_isolation.rs  dubbing.rs  mod.rs  sound_effects.rs  sound_generation.rs  sts.rs  text_to_voice.rs  tts.rs  voice_changer.rs  voice_design.rs  voice_generation.rs
src/endpoints/shared/: mod.rs
src/shared/: identifiers.rs  mod.rs  url.rs
src/utils/: mod.rs  playback.rs
tests/: client_builds.rs  models.rs
tests/testdata/: models_res.json  speech_from_file_test.txt
