[workspace]
resolver = "2"

members = [
    "elevenlabs_rs",
    "elevenlabs-convai",
    "examples/*"
]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["elevenlabs_rs", "elevenlabs-convai"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
