[package]
name = "elevenlabs-convai"
version = "0.1.0"
edition = "2021"

[dependencies]
elevenlabs_rs = { path = "../elevenlabs_rs", default-features = false, features = ["convai"] }
thiserror = "1.0.69"
futures-util = "0.3.30"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.23.1"
tokio = "1.42.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
