[package]
name = "elevenlabs-convai"
version = "0.3.0"
edition = "2021"
authors = ["rwxb"]
description = "A lib crate for ElevenLabs' conversational AI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rwxbytes/elevenlabs_rs/tree/master/elevenlabs-convai"
keywords = ["elevenlabs", "convai", "AI", "conversational-AI", "AI-agent"]

[dependencies]
elevenlabs_rs = {version = "0.6.0", default-features = false, features = ["convai"]}
thiserror = "1.0.69"
futures-util = "0.3.30"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.23.1"
tokio = "1.42.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"
