[package]
name = "elevenlabs_rs"
version = "0.6.0"
description = "A lib crate for ElevenLabs"
authors = ["rwxbytes <rwxbytes@proton.me>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rwxbytes/elevenlabs_rs"
keywords = ["elevenlabs", "genai", "tts", "AI", "AI-audio"]

[dependencies]
async-stream = "0.3.5"
base64 = "0.22.1"
bytes = "1.9.0"
futures-channel = "0.3.30"
futures-util = "0.3.28"
reqwest = { version = "0.12.5", features = [
  "stream",
  "json",
  "multipart",
], default-features = false }
rodio = { version = "0.17.1", optional = true }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }

[features]
default = [
  "admin",
  "genai",
  "playback",
  "reqwest/default-tls",
  "tokio-tungstenite/native-tls",
]
playback = ["dep:rodio"]
admin = []
convai = []
genai = []
ws = []
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots", "tokio-tungstenite/rustls"]
# Enable rustls and webpki-roots
rustls-webpki-roots = [
  "reqwest/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls",
]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = [
  "reqwest/native-tls-vendored",
  "tokio-tungstenite/native-tls",
]

[package.metadata.docs.rs]
all-features = true

