[package]
name = "outbound_call"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
elevenlabs-convai = { path = "../../elevenlabs-convai"}
axum = { version = "0.7.5", features = ["ws"] }
futures-util = "0.3.30"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio-stream = "0.1.17"
tokio = "1.42.0"
thiserror = "1.0.69"
tracing = "0.1.41"
reqwest = "0.12.9"
tracing-subscriber = "0.3.19"
