[package]
name = "outbound_call"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
elevenlabs_twilio = { path = "../../integrations/twilio" }
axum = { version = "0.8.1", features = ["ws"] }
tokio = "1.42.0"
futures-util = "0.3.30"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
