[package]
name = "real_time_monitoring"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
elevenlabs_twilio = { path = "../../integrations/twilio" }
axum = { version = "0.8.1", features = ["ws"] }
tokio = "1.42.0"
futures-util = "0.3.30"
tokio-stream = "0.1.17"
thiserror = "1.0.69"
tracing = "0.1.41"
reqwest = "0.12.9"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
cpal = "0.15.3"
dasp = { version = "0.11.0", features = ["signal", "interpolate-linear", "interpolate", "ring_buffer", "slice"] }
bytemuck = "1.21.0"
base64 = "0.22.1"

