[package]
name = "restaurant_receptionist"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = "1.43.0"
elevenlabs_twilio = { path = "../../integrations/twilio" }
axum = { version = "0.8.1", features = ["ws", "form"] }
futures-util = "0.3.30"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio-stream = "0.1.17"
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
